# noita_entangled_worlds

./: .gitignore  Cargo.toml  ComponentVftable.py  Justfile  LICENSE-MIT  README.md  compatibility.xml  contributing.md  env  flake.nix  init.lua  last_release_notes.md  mod.xml  prepare_release.py  quant.ew.work  settings.lua  text.lua  todo.txt
.github/workflows/: lint.yml  release.yml
NoitaPatcher/: noitapatcher.lua
api_examples/noita_api_example/: Cargo.toml
blob_guy/: Cargo.toml
blob_guy/blob_guy/: init.lua  materials.xml  mod.xml
blob_guy/blob_guy/NoitaPatcher/noitapatcher/nsew/: rect.lua  world.lua
blob_guy/examples/blob/: main.rs
blob_guy/src/: blob_guy.rs  chunk.rs  init_data.rs  lib.rs  noita.rs
blob_guy/src/noita/: ntypes.rs  pixel.rs
docs/: capabilities.md  distributed_world_sync.drawio  hooks.md  perks_that_dont_work_properly.md  testing_wands.md
ew_api_example/: init.lua  mod.xml  module.lua
ewext/: Cargo.toml  build.rs  vftables.txt
ewext/.cargo/: config.toml
ewext/noita_api/: Cargo.toml
ewext/noita_api/src/: lib.rs  lua.rs  serialize.rs
ewext/noita_api/src/lua/: lua_bindings.rs
ewext/noita_api_macro/: Cargo.toml
ewext/noita_api_macro/src/: components.json  lib.rs  lua_api.json
ewext/src/: addr_grabber.rs  debug.rs  lib.rs  lua_bindings.rs  lua_state.rs  modules.rs  net.rs  noita.rs  phys.rs  serialize.rs
ewext/src/modules/: entity_sync.rs  world_sync.rs
ewext/src/modules/entity_sync/: diff_model.rs  interest.rs
ewext/src/modules/world_sync/: change_tracker.rs
ewext/src/noita/: ntypes.rs  pixel.rs
extra/diff/: Cargo.toml
extra/dll_injector/: Cargo.toml
extra/malloc_log/: Cargo.toml
extra/malloc_probe/: Cargo.toml  build.rs
extra/malloc_probe/src/: lib.rs
extra/mem_reader/: Cargo.toml
extra/sprite_mask_gen/: .gitignore  Cargo.toml  README.md  input  input_border
files/append/: gun.lua
files/cbs/: immortal.lua  item_notify.lua  redirect_damage_to_host.lua  wand_fired_no_action.lua
files/entities/: client.xml
files/lib/: pretty_print.lua
files/src/: ctx.lua  enemy_sync.lua  inventory_helper.lua  item_sync.lua  net.lua  net_handling.lua  perk_fns.lua  player_fns.lua  util.lua  world_sync.lua
nix/: shell.nix
nix/cross/: README.md  build-ewext  build-noita-proxy  build-noita_proxy  ewext.nix  noita-proxy.nix  noita_proxy.nix
nix/overlays/: default.nix  rust-package.nix
noita-proxy/: .gitignore  Cargo.toml  Dockerfile  build.rs  rust-toolchain
noita-proxy/assets/: Info.plist
noita-proxy/assets/lang/de-DE/: main.ftl
noita-proxy/assets/lang/en-US/: main.ftl
noita-proxy/assets/lang/es-ES/: main.ftl
noita-proxy/assets/lang/fr-FR/: main.ftl
noita-proxy/assets/lang/ja-JP/: main.ftl
noita-proxy/assets/lang/ko-KR/: main.ftl
noita-proxy/assets/lang/pt-BR/: main.ftl
noita-proxy/assets/lang/ru-RU/: main.ftl
noita-proxy/assets/lang/zh-CN/: main.ftl
noita-proxy/src/: app.rs  audio_settings.rs  cli.rs  game_map.rs  lang.rs  lib.rs  lobby_code.rs  main.rs  messages.rs  mod_manager.rs  net.rs  paths.rs  player_cosmetics.rs  player_settings.rs  recorder.rs  releases.rs  self_update.rs  steam_helper.rs
noita-proxy/src/bookkeeping/: mod.rs  mod_manager.rs  noita_launcher.rs  releases.rs  save_paths.rs  save_state.rs  self_restart.rs  self_update.rs  settings.rs
noita-proxy/src/net/: audio.rs  des.rs  messages.rs  omni.rs  proxy_opt.rs  steam_networking.rs  world.rs
noita-proxy/src/net/world/: world_info.rs  world_model.rs
noita-proxy/src/net/world/world_model/: chunk.rs  encoding.rs  noita_encoding.rs
noita-proxy/src/util/: args.rs  lang.rs  mod.rs  steam_helper.rs
noita-proxy/tangled/: Cargo.toml  README.md
noita-proxy/tangled/examples/: chat.rs
noita-proxy/tangled/src/: common.rs  connection_manager.rs  error.rs  lib.rs  reactor.rs  util.rs
noita-proxy/tangled/src/connection_manager/: message_stream.rs
noita_api/: Cargo.toml
noita_api/noita_api_macro/: Cargo.toml
noita_api/noita_api_macro/src/: lib.rs
noita_api/src/: addr_grabber.rs  heap.rs  lib.rs  lua.rs
noita_api/src/lua/: lua_bindings.rs
noita_api/src/noita/: init_data.rs  mod.rs  types.rs  world.rs
noita_api/src/noita/types/: component.rs  component_data.rs  entity.rs  misc.rs  objects.rs  platform.rs  tags.rs  vftables.rs  world.rs
noita_api_example/: Cargo.toml
noita_api_example/src/: lib.rs
noita_proxy/: .gitignore  Cargo.toml  Cross.toml  build.rs
noita_proxy/assets/lang/de-DE/: main.ftl
noita_proxy/assets/lang/en-US/: main.ftl
noita_proxy/assets/lang/es-ES/: main.ftl
noita_proxy/assets/lang/fr-FR/: main.ftl
noita_proxy/assets/lang/ja-JP/: main.ftl
noita_proxy/assets/lang/ko-KR/: main.ftl
noita_proxy/assets/lang/pt-BR/: main.ftl
noita_proxy/assets/lang/ru-RU/: main.ftl
noita_proxy/assets/lang/zh-CN/: main.ftl
noita_proxy/src/: app.rs  asset.rs  audio_settings.rs  cli.rs  game_map.rs  game_settings.rs  lib.rs  main.rs  net.rs  paths.rs  player_cosmetics.rs  player_settings.rs  runtime_dir.rs
noita_proxy/src/bookkeeping/: mod_manager.rs  noita_launcher.rs  releases.rs  save_paths.rs  self_restart.rs  self_update.rs  settings.rs
noita_proxy/src/net/: audio.rs  messages.rs  omni.rs  steam_networking.rs  world.rs
noita_proxy/src/net/world/: world_model.rs
noita_proxy/src/net/world/world_model/: encoding.rs
noita_proxy/src/util/: color.rs  mod.rs  steam_helper.rs
noita_proxy/tangled/: Cargo.toml  LICENSE-MIT
noita_proxy/tangled/src/: connection_manager.rs  helpers.rs
noita_proxy/tangled/src/connection_manager/: message_stream.rs
quant.ew/: compatibility.xml  init.lua  mod.xml  settings.lua  translations.csv
quant.ew/NoitaPatcher/: load.lua
quant.ew/files/: magic.xml  magic_numbers.xml  version.lua
redist/: release_text.md
scripts/: .gitignore  check_pre_ci.py  ci_make_archives.py  ci_version.py  extract_steam_redist.py  gdb_ext.py  gdb_parse_ghidra.py  make_release_assets.py  mat_colors.py  parse_components.py  parse_lua_api.py  perf.sh  prepare_release.py  start-lutris.sh  start.sh
scripts/gdb_data/: vtables.json
shared/: Cargo.toml
src/: lua_bindings.rs
(+422 files in other folders)
