[package]
name = "blob_guy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
#crate-type = ["rlib"]

[dependencies]
noita_api = {workspace = true}
eyre = "0.6.12"
smallvec = "1.15.1"
rustc-hash = "2.1.1"
rayon = "1.11.0"

[dev-dependencies]
rupl = {git = "https://github.com/bgkillas/rupl.git", default-features = false, features = ["egui"] }
eframe = "0.33.2"
