[package]
name = "blob_guy"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib"]
#crate-type = ["rlib"]

[dependencies]
noita_api = { path = "../noita_api" }
eyre = "0.6.12"
smallvec = "1.15.1"
rustc-hash = "2.1.2"
rayon = "1.12.0"

[dev-dependencies]
rupl = {git = "https://github.com/bgkillas/rupl.git", default-features = false, features = ["egui"] }
eframe = "0.34.1"
