[package]
name = "ewext"
version = "1.6.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[profile.release]
lto = true
strip = true # Not having that causes wine debugger to crash.
panic = "abort"
split-debuginfo = "packed"
incremental=true
codegen-units=1
opt-level = 3

[dependencies]
backtrace = "0.3.74"
iced-x86 = "1.21.0"
eyre = "0.6.12"
noita_api = {path = "../noita_api"}
shared = {path = "../shared"}
libloading = "0.8.6"
rand = "0.9.0"
rustc-hash = "2.0.0"
bimap = "0.6.3"

[features]
#enables cross-compilation on older systems (for example, when compiling on ubuntu 20.04)
#due to unresolved bug in rust toolchain
#https://github.com/rust-lang/rust/issues/79609
pre2204 = []