[package]
name = "ewext"
version = "1.6.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.dev.package.bitcode]
opt-level = 3

[profile.dev.package.shared]
opt-level = 3

[profile.release]
lto = true
#strip = true # Not having that causes wine debugger to crash.
panic = "abort"
split-debuginfo = "packed"
incremental=true
codegen-units=1
opt-level = 3

[dependencies]
eyre = "0.6.12"
noita_api = {path = "../noita_api"}
shared = {path = "../shared"}
libloading = "0.9.0"
rand = "0.9.2"
rustc-hash = "2.1.1"
bimap = "0.6.3"
rayon = "1.11.0"
windows = { version = "0.62.2", features = ["Win32", "Win32_System", "Win32_System_Memory"] , optional=true}

[features]
default=[]
debug=["dep:windows"]
#enables cross-compilation on older systems (for example, when compiling on ubuntu 20.04)
#due to unresolved bug in rust toolchain
#https://github.com/rust-lang/rust/issues/79609
pre2204 = []
