[package]
name = "ewext"
version = "1.6.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.12"
noita_api = {workspace = true}
shared = {workspace = true}
libloading = "0.9.0"
rand = "0.10.1"
rustc-hash = "2.1.2"
bimap = "0.6.3"
rayon = "1.12.0"
windows = { version = "0.62.2", features = ["Win32", "Win32_System", "Win32_System_Memory"] , optional=true}

[features]
default=[]
debug=["dep:windows"]
#enables cross-compilation on older systems (for example, when compiling on ubuntu 20.04)
#due to unresolved bug in rust toolchain
#https://github.com/rust-lang/rust/issues/79609
pre2204 = []
