[workspace]
members = ["tangled"]
resolver = "2"

[package]
name = "noita-proxy"
description = "Noita Entangled Worlds companion app."
version = "0.28.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version="0.29.1", features = ["glow", "default_fonts"], default-features = false }
egui-file-dialog = "0.7.0"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
egui_plot = "0.29.0"
image = { version = "0.25.1", default-features = false, features = ["png", "webp"] }

ron = "0.8.1"
tungstenite = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tangled = { path = "tangled" }
serde = { version = "1.0.207", features = ["serde_derive", "derive"] }
bitcode = "0.6.0"
lz4_flex = { version = "0.11.3", default-features = false, features = ["std"]}
rand = "0.8.5"
steamworks = { git = "https://github.com/IntQuant/steamworks-rs", branch = "avatar-fix" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
clipboard = "0.5.0"
socket2 = { version = "0.5.7", features = ["all"] }
reqwest = { version = "0.12.4", features = ["blocking", "json", "http2", "rustls-tls-native-roots", "charset"], default-features = false}
serde_json = "1.0.117"
thiserror = "2.0.2"
poll-promise = "0.3.0"
zip = "2.2.0"
self-replace = "1.3.7"
bytemuck = { version = "1.16.0", features = ["derive"] }
bincode = "1.3.3"
rustc-hash = "2.0.0"
fluent-templates = "0.11.0"
unic-langid = { version = "0.9.5", features = ["serde"] }
fluent-bundle = "0.15.3"
crc = "3.2.1"
argh = "0.1.12"
shlex = "1.3.0"
quick-xml = { version = "0.37.0", features = ["serialize"] }
dashmap = "6.0.1"
eyre = "0.6.12"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
winresource = "0.1.17"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = true

[profile.release-lto]
inherits = "release"
