[workspace]
members = ["tangled"]
resolver = "2"

[package]
name = "noita-proxy"
description = "Noita Entangled Worlds companion app."
version = "1.2.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version= "0.31.0", features = ["glow", "default_fonts", "wayland", "x11"], default-features = false }
rfd = "0.15.1"
egui_extras = { version = "0.31.0", features = ["all_loaders"] }
#egui_plot = "0.29.0"
image = { version = "0.25.1", default-features = false, features = ["png", "webp"] }

wide = "0.7.30"
rayon = "1.10.0"
ron = "0.8.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tangled = { path = "tangled" }
serde = { version = "1.0.207", features = ["serde_derive", "derive"] }
bitcode = "0.6.3"
lz4_flex = { version = "0.11.3", default-features = false, features = ["std"]}
rand = "0.9.0"
steamworks = "0.11.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
clipboard = "0.5.0"
socket2 = { version = "0.5.7", features = ["all"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"]}
poll-promise = "0.3.0"
zip = "2.2.0"
self-replace = "1.3.7"
bytemuck = { version = "1.16.0", features = ["derive"] }
rustc-hash = "2.0.0"
fluent-templates = "0.13.0"
unic-langid = { version = "0.9.5", features = ["serde"] }
fluent-bundle = "0.15.3"
argh = "0.1.12"
shlex = "1.3.0"
quick-xml = { version = "0.37.0", features = ["serialize"] }
dashmap = "6.0.1"
eyre = "0.6.12"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing-appender = "0.2.3"
shared = {path = "../shared"}
rstar = "0.12.2"
cpal = {version="0.15.3", features=["jack"]}
rodio = "0.20.1"
opus = "0.3.0"
rubato = "0.16.1"
#fundsp = {version = "0.20.0", default-features = false, features = ["std"]}

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
winresource = "0.1.17"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = true

[profile.release-lto]
inherits = "release"