[workspace]
members = ["tangled"]
resolver = "2"

[package]
name = "noita-proxy"
description = "Noita Entangled Worlds companion app."
version = "1.6.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version= "0.32.1", features = ["glow", "default_fonts", "wayland", "x11"], default-features = false }
rfd = "0.15.4"
egui_extras = { version = "0.32.1", features = ["all_loaders"] }
#egui_plot = "0.29.0"
image = { version = "0.25.6", default-features = false, features = ["png", "webp"] }

wide = "0.7.33"
rayon = "1.11.0"
ron = "0.11.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
tangled = { path = "tangled" }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
bitcode = "0.6.7"
lz4_flex = { version = "0.11.5", default-features = false, features = ["std"]}
rand = "0.9.2"
steamworks = "0.11.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
arboard = { version = "3.6.1", features = ["wayland-data-control"]}
socket2 = { version = "0.6.0", features = ["all"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"]}
poll-promise = "0.3.0"
zip = "4.5.0"
self-replace = "1.5.0"
rustc-hash = "2.1.1"
fluent-templates = "0.13.1"
unic-langid = { version = "0.9.6", features = ["serde"] }
fluent-bundle = "0.16.0"
argh = "0.1.13"
shlex = "1.3.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
dashmap = "6.1.0"
eyre = "0.6.12"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing-appender = "0.2.3"
shared = {path = "../shared"}
rstar = "0.12.2"
cpal = {version= "0.16.0", features=["jack"]}
rodio = "0.21.1"
opus = "0.3.0"
rubato = "0.16.2"
directories = "6.0.0"
#fundsp = {version = "0.20.0", default-features = false, features = ["std"]}

[target.'cfg(windows)'.dependencies]
winapi="0.3.9"

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
winresource = "0.1.23"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = true

[profile.release-lto]
inherits = "release"
