[package]
name = "malloc_probe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
split-debuginfo = "packed"
incremental=true
codegen-units=1
opt-level = 3

[dependencies]
windows = {version="0.62.2", features = ["Win32", "Win32_System", "Win32_System_Memory"]}