[package]
name = "tangled"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IntQuant/tangled"
categories = ["network-programming", ]
description = "Work-in-progress UDP networking crate."


[[example]]
name = "chat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
tracing = "0.1.36"
dashmap = "6.0.1"
serde = {features = ["derive"], version = "1.0.142"}
bincode = "1.3.3"
quinn = "0.11.5"
num-bigint = "0.4.6"
rcgen = "0.13.1"
thiserror = "1.0.63"
tokio = "1.40.0"

[dev-dependencies]
test-log = { version = "0.2.11", default-features = false, features = ["trace"]}
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
