[package]
name = "tangled"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IntQuant/tangled"
categories = ["network-programming", ]
description = "Work-in-progress UDP networking crate."


[[example]]
name = "chat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
tracing = "0.1.41"
dashmap = "6.1.0"
quinn = "0.11.9"
rcgen = "0.14.3"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "io-util", "sync"] }
bitcode = "0.6.7"
socket2 = "0.6.0"

[dev-dependencies]
test-log = { version = "0.2.18", default-features = false, features = ["trace"]}
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
