[package]
name = "tangled"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IntQuant/tangled"
categories = ["network-programming", ]
description = "Work-in-progress UDP networking crate."


[[example]]
name = "chat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
tracing = "0.1.36"
dashmap = "6.0.1"
quinn = "0.11.5"
rcgen = "0.13.1"
thiserror = "2.0.3"
tokio = { version = "1.40.0", features = ["macros", "io-util", "sync"] }
bitcode = "0.6.3"
socket2 = "0.5.8"

[dev-dependencies]
test-log = { version = "0.2.16", default-features = false, features = ["trace"]}
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
